--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,50 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 body {
-/**  background-image: url('./img/apple-black-and-white-black-and-white-169573.jpg');
-  background-size:cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  min-height: inherit;
-  min-width: inherit;
-  max-height: 1500px;
-  max-width: 1280px;
-  display:block;
-  margin-left: auto;
-  margin-right: auto;
-  **/
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.landing-grid {
-  background-image: image('./img/apple-black-and-white-black-and-white-169573.jpg');
+.content {
+  background: #232526;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+.header-color {
+  background: #232526;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.side-nav-color {
+  background: #232526;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+
+.intro_page{
+  height: 100%;
+  width: 100%;
+  background-image: url('./img/apple-black-and-white-black-and-white-169573.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.intro-container {
+  position: relative;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
+ .banner-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+ }
